# public-procurement-analytical-system

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e986269114aa_initial_schema.py
backend/app/: cache.py  config.py  db.py  main.py
backend/app/analytics/: aggregations.py  batch.py  holidays.py  statistics.py
backend/app/analytics/indicators/: __init__.py  base.py  buyer_concentration.py  composite.py  non_competitive.py  price_deviation.py  shortened_period.py  single_bidding.py
backend/app/api/: _helpers.py  admin.py  dashboard.py  exports.py  schemas.py  statistics.py  tenders.py
backend/app/collector/: crawler.py  http_client.py  normalizer.py  schemas.py
backend/app/models/: __init__.py  base.py  cpv.py  documents.py  organizations.py  risk.py  sync.py  tenders.py
backend/app/scheduler/: main.py
backend/app/scripts/: seed_demo.py
backend/tests/: conftest.py  test_aggregations.py  test_api.py  test_batch_recompute.py  test_cache.py  test_composite_cri.py  test_crawler.py  test_http_client.py  test_indicators.py  test_indicators_framework.py  test_normalizer.py  test_statistics.py
backend/tests/fixtures/: tender_sample.json
frontend/: .gitignore  Dockerfile  index.html  package.json  tailwind.config.cjs  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/scripts/: screenshots.mjs
frontend/src/: index.css  main.tsx  router.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/lib/: format.ts  indicators.ts  (+2 more)
(+36 files in other folders)
